feat(imagelist): wallhaven 下可以不选择每页条数

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
+
+
+.pagination-root-select-none .MuiToolbar-root p:nth-child(2),
+.pagination-root-select-none .MuiTablePagination-selectRoot {
+  display: none;
 }
